# CppUtils_Core

./: CMakeLists.txt  CMakePresets.json  CppUtils_CoreConfig.cmake
Include/: CMakeLists.txt  Files.cmake
Include/Files/CppUtils/Core/: Algorithm.h  Algorithm.inl  AssertiveCode.h  AssertiveCode.inl  Concepts.h  ExpectedResult.h  Filesystem.h  Filesystem.inl  Lifetime.inl  Math.h  Math.inl  PlaceholderSharedLibrarySymbol.h  Raii.h  String.h  String.inl  StringSpan.h  StringSpan.inl  TypeTraits.h
Include/Include/: CppUtils_Core.h  CppUtils_Core.inl  CppUtils_Core_Export.h  cpputils_core_include_export.h
Include/Include/CppUtils/Core/: Concepts.h  Lifetime.h  Math.h  StringSpan.h
Include/Include/CppUtils_Core/: Concepts.h  CppUtils_Core.h  Raii.h  StringSpan.h
Module/: CMakeLists.txt
Object/: CMakeLists.txt
Shared/: CMakeLists.txt
Source/: CMakeLists.txt  Files.cmake
Source/Files/: Algorithm.cpp  AssertiveCode.cpp  Concepts.cpp  CppUtils_Core_Export.cpp  ExpectedResult.cpp  Filesystem.cpp  Lifetime.cpp  Math.cpp  PlaceholderSharedLibrarySymbol.cpp  String.cpp  StringSpan.cpp  TypeTraits.cpp
Source/Source/: Concepts.cpp  CppUtils_Core.cpp  Math.cpp  Raii.cpp  StringSpan.cpp
Static/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/Source/: CharLike.cpp  IeeeDivide.cpp  NonLvalueReference.cpp
